[tool.poetry]
name = "racs-tools"
version = "2.0.0"
description = ""
authors = ["Alec Thomson", "Andrew O'Brien <obrienan@uwm.edu>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
astropy = "^4.3.1"
numpy = "^1.21.2"
scipy = "^1.7.1"
radio-beam = "^0.3.3"
schwimmbad = "^0.3.2"
psutil = "^5.8.0"
spectral-cube = "^0.6.0"
tqdm = "^4.62.3"
mpi4py = {version = "^3.1.1", optional = true}

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^3.9.2"
black = "^21.9b0"

[tool.poetry.extras]
mpi = ["mpi4py"]

[tool.poetry.build]
script = "build.py"

[build-system]
requires = ["poetry-core>=1.0.0", "numpy>=1.21.2,==1.21.*", "setuptools"]
build-backend = "poetry.core.masonry.api"
